--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
+  },
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.12.0"
   },
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "~8.2.3",
+    "@angular/cli": "~8.3.0",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
+    "@angular/compiler-cli": "~8.2.3",
     "@angular/core": "~8.2.3",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.3",
@@ -31,6 +38,7 @@
     "c3": "^0.7.8",
     "css-animator": "^2.3.0",
     "d3": "^5.11.0",
+    "express": "^4.17.1",
     "firebase": "7.14.2",
     "flag-icon-css": "^3.0.0",
     "font-awesome-scss": "^1.0.0",
@@ -50,6 +58,7 @@
     "ngx-print": "^1.2.0-beta.4",
     "ngx-skeleton-loader": "^1.2.7",
     "ngx-spinner": "^9.0.2",
+    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.0.0-rc.0",
     "screenfull": "^3.3.2",
@@ -57,6 +66,7 @@
     "sweetalert2": "^9.10.12",
     "ti-icons": "^0.1.2",
     "tslib": "^1.10.0",
+    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
